<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:focusable="true"
  android:focusableInTouchMode="true">

  <View
    android:id="@+id/view1"
    android:layout_width="0dp"
    android:layout_height="110dp"
    android:background="@drawable/bottom_thin_theme12"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent" />

  <TextView
    android:id="@+id/tv_level"
    android:layout_width="82.5dp"
    android:layout_height="30dp"
    android:layout_marginTop="20dp"
    android:paddingRight="9dp"
    android:background="@drawable/round5_rect_app_theme6"
    android:drawableRight="@drawable/down_select"
    android:gravity="center"
    android:hint="@string/call_record_level"
    android:textColor="@color/common_app_text_theme2"
    android:textColorHint="@color/common_app_text_theme2"
    android:textSize="@dimen/text_size7"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/tv_count"
    app:layout_constraintTop_toTopOf="@+id/view1" />
  <TextView
    android:id="@+id/tv_count"
    android:layout_width="82.5dp"
    android:layout_height="30dp"
    android:paddingRight="9dp"
    android:background="@drawable/round5_rect_app_theme6"
    android:drawableRight="@drawable/down_select"
    android:gravity="center"
    android:hint="@string/call_record_count"
    android:textColor="@color/common_app_text_theme2"
    android:textColorHint="@color/common_app_text_theme2"
    android:textSize="@dimen/text_size7"
    app:layout_constraintLeft_toRightOf="@+id/tv_level"
    app:layout_constraintRight_toLeftOf="@+id/tv_time"
    app:layout_constraintTop_toTopOf="@+id/tv_level" />
  <TextView
    android:id="@+id/tv_time"
    android:layout_width="82.5dp"
    android:layout_height="30dp"
    android:paddingRight="9dp"
    android:background="@drawable/round5_rect_app_theme6"
    android:drawableRight="@drawable/down_select"
    android:gravity="center"
    android:hint="@string/call_record_time"
    android:textColor="@color/common_app_text_theme2"
    android:textColorHint="@color/common_app_text_theme2"
    android:textSize="@dimen/text_size7"
    app:layout_constraintLeft_toRightOf="@+id/tv_count"
    app:layout_constraintRight_toLeftOf="@+id/tv_status"
    app:layout_constraintTop_toTopOf="@+id/tv_level" />
  <TextView
    android:id="@+id/tv_status"
    android:layout_width="82.5dp"
    android:layout_height="30dp"
    android:paddingRight="9dp"
    android:background="@drawable/round5_rect_app_theme6"
    android:drawableRight="@drawable/down_select"
    android:gravity="center"
    android:hint="@string/call_record_status"
    android:textColor="@color/common_app_text_theme2"
    android:textColorHint="@color/common_app_text_theme2"
    android:textSize="@dimen/text_size7"
    app:layout_constraintLeft_toRightOf="@id/tv_time"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/tv_level" />
  <TextView
    android:id="@+id/tv_result"
    android:layout_width="82.5dp"
    android:layout_height="30dp"
    android:layout_marginTop="10dp"
    android:paddingRight="9dp"
    android:background="@drawable/round5_rect_app_theme6"
    android:drawableRight="@drawable/down_select"
    android:gravity="center"
    android:hint="@string/call_record_result"
    android:textColor="@color/common_app_text_theme2"
    android:textColorHint="@color/common_app_text_theme2"
    android:textSize="@dimen/text_size7"
    app:layout_constraintLeft_toLeftOf="@+id/tv_level"
    app:layout_constraintTop_toBottomOf="@+id/tv_level" />

  <android.support.v7.widget.RecyclerView
    android:id="@+id/recycler_view_call_record"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:overScrollMode="never"
    app:layout_constraintBottom_toTopOf="@+id/view3"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/view1" />

  <View
    android:id="@+id/view3"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:background="@drawable/top_thin_theme12"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent" />

  <TextView
    android:id="@+id/tv_refresh"
    android:layout_width="60dp"
    android:layout_height="30dp"
    android:layout_marginLeft="10dp"
    android:background="@drawable/round5_rect_app_theme6"
    android:gravity="center"
    android:text="@string/call_record_refresh"
    app:layout_constraintBottom_toBottomOf="@+id/view3"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="@+id/view3" />

  <ImageView
    android:id="@+id/iv_right"
    android:layout_width="20dp"
    android:layout_height="0dp"
    android:layout_marginRight="10dp"
    android:scaleType="centerInside"
    android:src="@drawable/right"
    app:layout_constraintBottom_toBottomOf="@+id/view3"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/view3" />
  <TextView
    android:id="@+id/tv_pages"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="15dp"
    android:textColor="@color/common_app_text_theme3"
    android:textSize="@dimen/text_size6"
    app:layout_constraintBottom_toBottomOf="@+id/view3"
    app:layout_constraintRight_toLeftOf="@+id/iv_right"
    app:layout_constraintTop_toTopOf="@+id/view3" />
  <EditText
    android:id="@+id/et_page_num"
    android:layout_width="wrap_content"
    android:layout_height="30dp"
    android:layout_marginRight="8dp"
    android:paddingLeft="5dp"
    android:maxLength="9"
    android:paddingRight="5dp"
    android:background="@drawable/round5_rect_app_theme6"
    android:gravity="center"
    android:imeOptions="actionSearch"
    android:inputType="number"
    android:minWidth="30dp"
    android:textColor="@color/common_app_text_theme2"
    android:textSize="@dimen/text_size5"
    app:layout_constraintBottom_toBottomOf="@+id/view3"
    app:layout_constraintRight_toLeftOf="@+id/tv_pages"
    app:layout_constraintTop_toTopOf="@+id/view3" />
  <TextView
    android:id="@+id/tv_di"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="8dp"
    android:gravity="center"
    android:text="第"
    android:textColor="@color/common_app_text_theme3"
    android:textSize="@dimen/text_size6"
    app:layout_constraintBottom_toBottomOf="@+id/view3"
    app:layout_constraintRight_toLeftOf="@+id/et_page_num"
    app:layout_constraintTop_toTopOf="@+id/view3" />
  <ImageView
    android:id="@+id/iv_left"
    android:layout_width="20dp"
    android:layout_height="0dp"
    android:layout_marginRight="8dp"
    android:scaleType="centerInside"
    android:src="@drawable/left"
    app:layout_constraintBottom_toBottomOf="@+id/view3"
    app:layout_constraintRight_toLeftOf="@+id/tv_di"
    app:layout_constraintTop_toTopOf="@+id/view3" />
</android.support.constraint.ConstraintLayout>